    - get_dup_unchecked() and mark_dup_checked() to get a list of crashes that
      need to be checked for being a duplicate and chalk them off. This is
      aimed at crashes which do not need retracing, such as unhandled Python
      exceptions.
  * apport/crashdb_impl/launchpad.py: Implement above methods for launchpad
    (moving the code from bin/launchpad-crash-digger).
  * bin/launchpad-crash-digger: Drop Launchpad specific code and replace it
    with calls to above new functions. Rename to bin/crash-digger. Also rename
    all 'cookie' to 'auth' (as happened with the other applications earlier).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 14 Jun 2007 18:29:36 +0200

apport (0.83) gutsy; urgency=low

  * apport/crashdb.py: Separate abstract from implemented functions.
  * apport/crashdb.py, apport/packaging.py, apport/ui.py: Use
    NotImplementedError instead of Exception in the abstract methods.
  * apport/packaging.py: Add interface compare_versions() for comparing
    package version numbers.
  * backends/packaging-apt-dpkg.py: Implement compare_versions() using
    apt.VersionCompare(), add some test cases.
  * apport/report.py: Fix typo: 'none' -> 'None'.
  * apport/chroot.py: Do not include /usr/local/lib and /usr/lib in
    LD_LIBRARY_PATH, just /lib, so that we still use the libc from outside,
    but e. g. libxml2 from inside the chroot.

  https://blueprints.launchpad.net/ubuntu/+spec/apport-crash-duplicates: Merge
  crash-dups branch, which implements automatic crash duplicate detection:

  * apport/crashdb.py: Add methods for crash duplicate detection.
  * apport/crashdb_impl/memory.py: Change internal data management to track
    fixed version and duplicates.
  * apport/crashdb_impl/memory.py: Add a test suite for all methods, including
    the duplicate detection API of the base CrashDatabase (since it is
    much easier to test it here, on an actual implementation).